modified home page

--- a/single.html
+++ b/single.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>B2BPantry - an Ecommerce Online B2B Shopping</title>
+<title>B2BEazy - an Ecommerce Online B2B Shopping</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -74,7 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</ul>
 			</div>
 			<div class="w3ls_logo_products_left">
-				<h1><a href="index.html">B2B Pantry</a></h1>
+				<h1><a href="index.html">B2B Eazy</a></h1>
 			</div>
 		<div class="w3l_search">
 			<form action="#" method="post">
