--- a/index.html
+++ b/index.html
@@ -228,25 +228,86 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <img src="images/11.jpg" alt="" />
             <!--Slider Description example-->
             <div class="slide-desc">
-                <h3>Buy Daily Essentials - Now OnLine With Us</h3>
+                <h3>
+                Buy Daily Essentials @ WholeSale Prices
+                </h3>
             </div>
         </li>
         <li>
             <img src="images/22.jpg" alt="" />
             <div class="slide-desc">
-                <h3>Buy Beverages - Now OnLine With Us</h3>
+                <h3>Buy Beverages @ WholeSale Prices</h3>
             </div>
         </li>
 
         <li>
             <img src="images/44.jpg" alt="" />
             <div class="slide-desc">
-                <h3>Buy Whole Spices Products - Now OnLine With Us</h3>
+                <h3>Buy Frozen Foods @ Wholesale Prices</h3>
             </div>
         </li>
     </ul>
     <!-- //main-slider -->
     <!-- //top-header and slider -->
+
+    <section class="bar no-mb color-white padding-big text-center-sm">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2 class="text-uppercase">Business... EAZY</h2>
+                        <p class="lead mb-small">We will make you worry-free</p>
+                        <p class="mb-small">A <strong>dedicated purchase manager</strong> for your all your needs. You <strong>focus</strong> on your business expansion, let us worry about the rest. <strong>LESS vendors</strong> to deal with. We make your business <strong> EAZZZZYYYYY!!!! PEASYYYY!!!!</strong></p>
+
+                        <p><a href="#" class="btn btn-template-main">Read more</a>
+                        </p>
+                    </div>
+                    <div class="col-md-6 text-center">
+                        <img src="images/template-easy-customize.png" alt="" class="img-responsive">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="bar background-gray no-mb padding-big text-center-sm">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 text-center">
+                        <img src="images/template-easy-code.png" alt="" class="img-responsive">
+                    </div>
+                    <div class="col-md-6">
+                        <h2 class="text-uppercase">Better Quality &amp; Lowest Prices</h2>
+                        <p class="lead mb-small">We did our best to help you</p>
+                        <p class="mb-small">Everything here is purchased directly from the Manufacturers, Importers & Wholesalers. We guarantee best price and best quality.</p>
+
+                        <p><a href="#" class="btn btn-template-transparent-primary">Read more</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+    <section class="bar no-mb color-white padding-big text-center-sm">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2 class="text-uppercase">Everything you need</h2>
+                        <p class="lead mb-small">40+ categories </p>
+                        <p class="mb-small">We can procure literally <strong>everything you would possibly need in running,  restaurants,bakeries or retail business.</strong>. If you still miss something, let us know and we will try to procure them for you.</p>
+
+                        <p><a href="#" class="btn btn-template-main">Read more</a>
+                        </p>
+                    </div>
+                    <div class="col-md-6 text-center">
+                        <img src="images/template-easy-customize.png" alt="" class="img-responsive">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     <!-- top-brands -->
     <div class="top-brands">
         <div class="container">
@@ -315,32 +376,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
     <!-- //top-brands -->
-    <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <a href="beverages.html"> <img class="first-slide" src="images/b1.jpg" alt="First slide"></a>
 
-            </div>
-            <div class="item">
-                <a href="personalcare.html"> <img class="second-slide " src="images/b3.jpg" alt="Second slide"></a>
-
-            </div>
-            <div class="item">
-                <a href="groceries.html"><img class="third-slide " src="images/b1.jpg" alt="Third slide"></a>
-
-            </div>
-        </div>
-
-    </div>
-    <!-- /.carousel -->
     <!--brands-->
 <section class="bar background-pentagon no-mb">
             <div class="container">
