updated home page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="agileits_header">
         <div class="container">
             <div class="w3l_offers">
-                <p>BEST QUALITY... LOWEST PRICES... <a href="products.html">SHOP NOW</a></p>
+                <p>BEST QUALITY... LOWEST PRICES... <a href="quote.html">Request Quote</a></p>
             </div>
             <div class="agile-login">
                 <ul>
@@ -81,13 +81,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 </ul>
             </div>
-            <div class="product_list_header">
+            <!--<div class="product_list_header">
                 <form action="#" method="post" class="last">
                     <input type="hidden" name="cmd" value="_cart">
                     <input type="hidden" name="display" value="1">
                     <button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
                 </form>
-            </div>
+            </div>-->
             <div class="clearfix"> </div>
         </div>
     </div>
@@ -96,7 +96,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <div class="w3ls_logo_products_left1">
                 <ul class="phone_email">
-                    <li><i class="fa fa-phone" aria-hidden="true"></i>Order online or call us : +91 9880933633</li>
+                    <li><i class="fa fa-phone" aria-hidden="true"></i>Get Quote or call us @ : +91 90355 92414</li>
 
                 </ul>
             </div>
@@ -141,12 +141,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <div class="multi-gd-img">
                                         <ul class="multi-column-dropdown">
                                             <h6>All Groceries</h6>
-                                            <li><a href="groceries.html">Rice & Rice Products</a></li>
-                                            <li><a href="groceries.html">Dals & Pulses</a></li>
-                                            <li><a href="groceries.html">Flours & Sooji</a></li>
-                                            <li><a href="groceries.html">Oils & ghee</a></li>
-                                            <li><a href="groceries.html">Dry Fruits</a></li>
-                                            <li><a href="groceries.html">Masalas & Spices</a></li>
+                                            <li><a href="quote.html">Rice & Rice Products</a></li>
+                                            <li><a href="quote.html">Dals & Pulses</a></li>
+                                            <li><a href="quote.html">Flours & Sooji</a></li>
+                                            <li><a href="quote.html">Oils & ghee</a></li>
+                                            <li><a href="quote.html">Dry Fruits</a></li>
+                                            <li><a href="quote.html">Masalas & Spices</a></li>
                                         </ul>
                                     </div>
 
@@ -160,12 +160,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <div class="multi-gd-img">
                                         <ul class="multi-column-dropdown">
                                             <h6>All Organic</h6>
-                                            <li><a href="organic.html">Rice & Rice Products</a></li>
-                                            <li><a href="organic.html">Dals & Pulses</a></li>
-                                            <li><a href="organic.html">Flours & Sooji</a></li>
-                                            <li><a href="organic.html">Oils & ghee</a></li>
-                                            <li><a href="organic.html">Dry Fruits</a></li>
-                                            <li><a href="organic.html">Masalas & Spices</a></li>
+                                            <li><a href="quote.html">Rice & Rice Products</a></li>
+                                            <li><a href="quote.html">Dals & Pulses</a></li>
+                                            <li><a href="quote.html">Flours & Sooji</a></li>
+                                            <li><a href="quote.html">Oils & ghee</a></li>
+                                            <li><a href="quote.html">Dry Fruits</a></li>
+                                            <li><a href="quote.html">Masalas & Spices</a></li>
                                         </ul>
                                     </div>
 
@@ -179,14 +179,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="row">
                                     <div class="multi-gd-img">
                                         <ul class="multi-column-dropdown">
-                                            <h6>Baby Care</h6>
-                                            <li><a href="packagedfoods.html">Sauces & Ketchup</a></li>
-                                            <li><a href="packagedfoods.html">Noodles & Pasta</a></li>
-                                            <li><a href="packagedfoods.html">Pickles</a></li>
-                                            <li><a href="packagedfoods.html">Breakfast Cereals</a></li>
-                                            <li><a href="packagedfoods.html">Ready to Eat</a></li>
-                                            <li><a href="packagedfoods.html">Choclates & Sweets</a></li>
-                                            <li><a href="packagedfoods.html">Biscuits</a></li>
+                                            <h6>Packaged Foods</h6>
+                                            <li><a href="quote.html">Sauces & Ketchup</a></li>
+                                            <li><a href="quote.html">Noodles & Pasta</a></li>
+                                            <li><a href="quote.html">Pickles</a></li>
+                                            <li><a href="quote.html">Breakfast Cereals</a></li>
+                                            <li><a href="quote.html">Ready to Eat</a></li>
+                                            <li><a href="quote.html">Choclates & Sweets</a></li>
+                                            <li><a href="quote.html">Biscuits</a></li>
                                         </ul>
                                     </div>
 
@@ -199,22 +199,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="row">
                                     <div class="multi-gd-img">
                                         <ul class="multi-column-dropdown">
-                                            <h6>Tea & Coeffe</h6>
-                                            <li><a href="beverages.html">Tea & Coffee</a></li>
-                                            <li><a href="beverages.html">Mineral Water</a></li>
-                                            <li><a href="beverages.html">Soft Drinks</a></li>
-                                            <li><a href="beverages.html">Fruit Drinks & juices</a></li>
-                                            <li><a href="beverages.html">Energy & Health Drinks </a></li>
-                                            <li><a href="beverages.html">Milk shakes</a></li>
+                                            <h6>Tea & Coffee</h6>
+                                            <li><a href="quote.html">Tea & Coffee</a></li>
+                                            <li><a href="quote.html">Mineral Water</a></li>
+                                            <li><a href="quote.html">Soft Drinks</a></li>
+                                            <li><a href="quote.html">Fruit Drinks & juices</a></li>
+                                            <li><a href="quote.html">Energy & Health Drinks </a></li>
+                                            <li><a href="quote.html">Milk shakes</a></li>
                                         </ul>
                                     </div>
 
                                 </div>
                             </ul>
                         </li>
-                        <li><a href="gourmet.html">Gourmet</a></li>
-                        <li><a href="offers.html">Offers</a></li>
+                        <li><a href="quote.html">Gourmet</a></li>
+<!--                        <li><a href="offers.html">Offers</a></li>-->
                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="quote.html" style="background-color: #fe9126">GET QUOTE</a></li>
                     </ul>
                 </div>
             </nav>
@@ -269,7 +270,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </section>
 
 
-        <section class="bar background-gray no-mb padding-big text-center-sm">
+    <section class="bar background-gray no-mb padding-big text-center-sm">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center">
@@ -499,7 +500,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <ul class="address">
                         <li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>HSR Layout <span>Bangalore.</span></li>
                         <li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:ganasaiproducts@gmail.com">ganasaiproducts@gmail.com</a></li>
-                        <li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+91 9880933633</li>
+                        <li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+91 90355 92414</li>
                     </ul>
                 </div>
                 <div class="col-md-3 w3_footer_grid">
