--- a/single.html
+++ b/single.html
@@ -44,7 +44,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="agileits_header">
 		<div class="container">
 			<div class="w3l_offers">
-				<p>BETTER QUALITY... LOWEST PRICES... <a href="products.html">SHOP NOW</a></p>
+				<p>BETTER QUALITY... LOWEST PRICES... <a href="products.html">Request Quote</a></p>
 			</div>
 			<div class="agile-login">
 				<ul>
@@ -69,7 +69,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 		<div class="w3ls_logo_products_left1">
 				<ul class="phone_email">
-					<li><i class="fa fa-phone" aria-hidden="true"></i>Order online or call us : (+0123) 234 567</li>
+					<li><i class="fa fa-phone" aria-hidden="true"></i>Order online or call us : 90355 92414</li>
 					
 				</ul>
 			</div>
