--- a/index.html
+++ b/index.html
@@ -498,8 +498,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <h3>Contact</h3>
 
                     <ul class="address">
-                        <li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>HSR Layout <span>Bangalore.</span></li>
-                        <li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:ganasaiproducts@gmail.com">ganasaiproducts@gmail.com</a></li>
+                        <li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>HSR Layout, Koramangala <span>Bangalore.</span></li>
+                        <li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:sales@b2beazy.com">sales@b2beazy.com</a></li>
                         <li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+91 90355 92414</li>
                     </ul>
                 </div>
